--- a/css/home.css
+++ b/css/home.css
@@ -123,3 +123,149 @@
         margin-bottom: 10px;
     }
 }
+
+
+.services-section {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.services-section h4 {
+    color: #fff;
+}
+
+.services-section .service-item {
+    background-color: #0000d3;
+    border-radius: 15px;
+    padding: 20px;
+    margin: 10px auto;
+    text-align: center;
+    color: #fff;
+    max-width: 280px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.services-section .service-item img {
+    max-width: 250px;
+    margin-bottom: 10px;
+    height: 150px;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
+
+.services-section .service-item h5 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+}
+
+.services-section .service-item .access-btn {
+    background-color: #f5f5f5;
+    color: rgb(3, 0, 163);
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    border: none;
+    text-decoration: none;
+    width: 100%;
+}
+
+.services-section .service-item .access-btn:hover {
+    background-color: #909af8;
+    color: #ffffff;
+    transition: ease-in-out;
+}
+
+@media (max-width: 768px) {
+    .services-section .service-item {
+        margin: 20px auto;
+        max-width: 90%;
+    }
+}
+
+
+
+ /* Customer Support Chat */
+ .chat-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 300px;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    display: none;
+    /* Hidden by default */
+}
+
+.chat-header {
+    background-color: #0000d3;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.chat-messages {
+    padding: 10px;
+    height: 200px;
+    overflow-y: auto;
+    background-color: #e0e0e0;
+}
+
+.chat-input {
+    display: flex;
+    border-top: 1px solid #ccc;
+}
+
+.chat-input input {
+    flex: 1;
+    padding: 10px;
+    border: none;
+    border-radius: 0;
+    outline: none;
+}
+
+.chat-input button {
+    background-color: #0000d3;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.chat-toggle {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #0000d3;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 20px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.chat-toggle i {
+    font-size: 24px;
+    margin-left: 10px;
+}
+
+@media (max-width: 768px) {
+    .chat-container {
+        width: 90%;
+        right: 5%;
+    }
+
+    .chat-toggle {
+        width: auto;
+        padding: 10px;
+        right: 5%;
+    }
+}
