--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
+body {
+    /* overflow-x: hidden; */
+}
+
 .task-form {
     background-color: #350d66;
     padding: 20px;
@@ -128,11 +132,15 @@
 .services-section {
     text-align: center;
     margin-top: 50px;
+    width: 100%;
+    max-width: 90%;
+    margin: 50px auto;
 }
 
 .services-section h4 {
     color: #fff;
 }
+
 
 .services-section .service-item {
     background-color: #0000d3;
@@ -200,14 +208,23 @@
     overflow: hidden;
     display: none;
     /* Hidden by default */
+    z-index: 1000;
 }
 
 .chat-header {
-    background-color: #0000d3;
+    background-color: #000055;
     color: white;
     padding: 10px;
     text-align: center;
     font-weight: bold;
+    position: relative;
+}
+
+.chat-header .close-chat {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
 }
 
 .chat-messages {
@@ -215,6 +232,7 @@
     height: 200px;
     overflow-y: auto;
     background-color: #e0e0e0;
+    color: #000000;
 }
 
 .chat-input {
@@ -250,6 +268,7 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+    z-index: 1000;
 }
 
 .chat-toggle i {
