--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 body {
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 .task-form {
@@ -249,7 +249,7 @@ body {
 }
 
 .chat-input button {
-    background-color: #0000d3;
+    background-color: #ffffff;
     color: white;
     border: none;
     padding: 10px;
@@ -260,8 +260,8 @@ body {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #0000d3;
-    color: white;
+    background-color: rgba(255, 255, 255, 0.5);
+    color: rgb(32, 32, 32);
     border: none;
     border-radius: 50px;
     padding: 10px 20px;
