added home page - chat support

--- a/css/home.css
+++ b/css/home.css
@@ -249,7 +249,7 @@ body {
 }
 
 .chat-input button {
-    background-color: #ffffff;
+    background-color: #2500f7;
     color: white;
     border: none;
     padding: 10px;
