--- a/css/home.css
+++ b/css/home.css
@@ -224,6 +224,8 @@ body {
     position: absolute;
     right: 10px;
     top: 10px;
+    font-size: 20px;
+    margin: auto;
     cursor: pointer;
 }
 
@@ -262,7 +264,7 @@ body {
     right: 20px;
     background-color: rgba(255, 255, 255, 0.5);
     color: rgb(32, 32, 32);
-    border: none;
+    border: 1px solid #0004ff;
     border-radius: 50px;
     padding: 10px 20px;
     cursor: pointer;
