updated users page, created task page and payment page

--- a/admin/css/task.css
+++ b/admin/css/task.css
@@ -1,12 +1,11 @@
-/* Add your custom styles here */
-.user-list {
+.task-list {
     margin-top: 20px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     overflow-x: auto;
 }
 
-.user-list table {
+.task-list table {
     width: 100%;
     margin-bottom: 20px;
     background-color: #1d2b64;
@@ -15,14 +14,14 @@
     overflow: hidden;
 }
 
-.user-list table th,
-.user-list table td {
+.task-list table th,
+.task-list table td {
     padding: 15px;
     text-align: left;
     white-space: nowrap;
 }
 
-.user-list table th {
+.task-list table th {
     background-color: #0b1033;
 }
 
@@ -32,7 +31,7 @@
     font-size: 1.2em;
 }
 
-.search-filter {
+.task-filter {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -41,32 +40,26 @@
     margin-bottom: 20px;
 }
 
-.search-filter input,
-.search-filter select,
-.search-filter button {
+.task-filter input,
+.task-filter select {
     margin-bottom: 10px;
     width: 100%;
     max-width: 200px;
 }
 
-.search-filter button {
-    max-width: 150px;
+.modal-body p {
+    margin-bottom: 10px;
 }
 
-/* Modal Styles */
-#userProfileModal .modal-header {
-    background-color: #1d2b64;
-    color: white;
+.communication-entry {
+    background-color: #f8f9fa;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
 
-#userProfileModal .modal-body {
-    background-color: #f5f5f5;
-}
-
-@media (min-width: 768px) {
-    .search-filter {
-        /* flex-direction: column; */
-        flex-wrap: nowrap;
-    }
-
+#task-communications {
+    max-height: 150px;
+    /* Adjust the height to fit three items */
+    overflow-y: auto;
 }
